# emb.c

./: .gitattributes  .gitignore  .kcsignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  emb.c  emb.h  libemb.c  model.c  test.sh
lib/: model.gguf
src/: emb.c  emb.h  libemb.c
